First changes to index.html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>reveal.js - The HTML Presentation Framework</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="Agile Development Practices">
+		<meta name="author" content="Ibrahim El-Etr &amp; Mohamed Ragab">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -43,10 +43,10 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Reveal.js</h1>
-					<h3>HTML Presentations Made Easy</h3>
+					<h2>agile development practices</h2>
+					<h3>for sustainable software development</h3>
 					<p>
-						<small>Created by <a href="http://hakim.se">Hakim El Hattab</a> / <a href="http://twitter.com/hakimel">@hakimel</a></small>
+						<small>by <a href="">Ibrahime El-Etr</a> &amp; <a href="">Mohamed Ragab</a></small>
 					</p>
 				</section>
 
@@ -349,8 +349,8 @@ function linkify( selector ) {
 				</section>
 
 				<section>
-					<h1>THE END</h1>
-					<h3>BY Hakim El Hattab / hakim.se</h3>
+					<h1>thank you</h1>
+					<h3></h3>
 				</section>
 
 			</div>
@@ -368,10 +368,14 @@ function linkify( selector ) {
 				controls: true,
 				progress: true,
 				history: true,
+				keyboard: true,
+				overview: true,
 				center: true,
+				mouseWheel: true,
 
 				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+				transitionSpeed: 'default', // default/fast/slow
 
 				// Parallax scrolling
 				// parallaxBackgroundImage: 'https://s3.amazonaws.com/hakim-static/reveal-js/reveal-parallax-1.jpg',
