--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" href="css/reveal.min.css">
 		<link rel="stylesheet" href="css/theme/default.css" id="theme">
 
+
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
@@ -53,91 +54,79 @@
 				</section>
 
 				<section>
-					<h2>Heads Up</h2>
+					<h2>Speakers</h2>
 					<p>
-						reveal.js is a framework for easily creating beautiful presentations using HTML. You'll need a browser with
-						support for CSS 3D transforms to see it in its full glory.
+						<ul class="orange">
+							<li class="fragment"><b>Ibrahim El-Etr</b>
+                                <div>Head of Program Management in Orange Labs Cairo</div>
+                                <div>MBA student in the German University in Cairo</div>
+                                <div></div>
+                            </li><br/>
+							<li class="fragment"><b>Mohamed Ragab</b>
+                                <div>Head of Technology, and an Agile Development Coach in Orange Labs Cairo</div>
+                            </li>
+						</ul>
+
 					</p>
 
 					<aside class="notes">
-						Oh hey, these are some notes. They'll be hidden in your presentation, but you can see them if you open the speaker notes window (hit 's' on your keyboard).
-					</aside>
+                        Ibrahim is currently the Head of Program Management in Orange Labs Cairo, and a MBA student in the German University in Cairo. Ibrahim joined Orange Labs as the Head of Software Development in 2006. Ibrahim has 8 years of solid management experience, leading several teams to deliver several portfolios of software products to market. He has over 21 years of software development experience associated with highly diversified portfolio of international companies in different culture environments such as Orange, Telepin, Airwide solutions, Mitel networks, Nortel networks, and Newbridge (Alcatel Lucent). He spent the first 15 years of his career working for start up companies including owning his own business. Entrepreneurship is part of his DNA and he brings that outlook and method of work to every team he works with.
+                        Mohamed Ragab is currently the Head of Technology, and an Agile Development Coach in Orange Labs Cairo. He joined Orange Labs as a Senior Software and Service Architect in 2009. Mohamed has more than 15 years of experience building software systems in a wide range of industrial domains, in small local companies as well as large multi-national organizations. Mohamed has experience delivering projects with small collocated teams of a few developers to large distributed teams with a few hundred developers on board. Mohamed's expertise is in the Java platform, Open Source technology stacks, software development infrastructure and automation, and Agile Development Methodologies.					</aside>
 				</section>
 
-				<!-- Example of nested vertical slides -->
-				<section>
-					<section>
-						<h2>Vertical Slides</h2>
-						<p>
-							Slides can be nested inside of other slides,
-							try pressing <a href="#" class="navigate-down">down</a>.
-						</p>
-						<a href="#" class="image navigate-down">
-							<!-- <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow"> -->
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 1</h2>
-						<p>Press down or up to navigate.</p>
-					</section>
-					<section>
-						<h2>Basement Level 2</h2>
-						<p>Cornify</p>
-						<a class="test" href="http://cornify.com">
-							<!-- <img width="280" height="326" src="https://s3.amazonaws.com/hakim-static/reveal-js/cornify.gif" alt="Unicorn"> -->
-						</a>
-					</section>
-					<section>
-						<h2>Basement Level 3</h2>
-						<p>That's it, time to go back up.</p>
-						<a href="#/2" class="image">
-							<!-- <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Up arrow" style="-webkit-transform: rotate(180deg);"> -->
-						</a>
-					</section>
-				</section>
+                <section data-transition="fade">
+                    <h2>Show of hands</h2>
+                    <ul class="orange">
+                        <li><b>How do you relate yourself to software development?</b>
+                            <div class="fragment" data-fragment-index="1"><span class="fragment current-visible pointer" data-fragment-index="1"></span>
+                                Testing</div>
+                            <div class="fragment" data-fragment-index="2"><span class="fragment current-visible pointer" data-fragment-index="2"></span>
+                                Development</div>
+                            <div class="fragment" data-fragment-index="3"><span class="fragment current-visible pointer" data-fragment-index="3"></span>
+                                Management</div>
+                            <div class="fragment" data-fragment-index="4"><span class="fragment current-visible pointer" data-fragment-index="4"></span>
+                                Marketing</div>
+                            <div class="fragment" data-fragment-index="5"><span class="fragment current-visible pointer" data-fragment-index="5"></span>
+                                Customer</div>
+                        </li><br/>
+                    </ul>
+                </section>
 
-				<section>
-					<h2>Slides</h2>
-					<p>
-						Not a coder? No problem. There's a fully-featured visual editor for authoring these, try it out at <a href="http://slid.es" target="_blank">http://slid.es</a>.
-					</p>
-				</section>
+                <section data-transition="fade">
+                    <h2>Show of hands</h2>
+                    <ul class="orange">
+                        <li><b>Where are you from Agile software development?</b>
+                            <div class="fragment" data-fragment-index="1"><span class="fragment current-visible pointer" data-fragment-index="1"></span>
+                                Exploring</div>
+                            <div class="fragment" data-fragment-index="2"><span class="fragment current-visible pointer" data-fragment-index="2"></span>
+                                Planning</div>
+                            <div class="fragment" data-fragment-index="3"><span class="fragment current-visible pointer" data-fragment-index="3"></span>
+                                Started adoption</div>
+                            <div class="fragment" data-fragment-index="4"><span class="fragment current-visible pointer" data-fragment-index="4"></span>
+                                Iterating</div>
+                            <div class="fragment" data-fragment-index="5"><span class="fragment current-visible pointer" data-fragment-index="5"></span>
+                                Tried it, and it didn't work</div>
+                        </li><br/>
+                    </ul>
+                </section>
 
-				<section>
-					<h2>Point of View</h2>
-					<p>
-						Press <strong>ESC</strong> to enter the slide overview.
-					</p>
-					<p>
-						Hold down alt and click on any element to zoom in on it using <a href="http://lab.hakim.se/zoom-js">zoom.js</a>. Alt + click anywhere to zoom back out.
-					</p>
-				</section>
-
-				<section>
-					<h2>Works in Mobile Safari</h2>
-					<p>
-						Try it out! You can swipe through the slides and pinch your way to the overview.
-					</p>
-				</section>
-
-				<section>
-					<h2>Marvelous Unordered List</h2>
-					<ul>
-						<li>No order here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-						<li>Or here</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Fantastic Ordered List</h2>
-					<ol>
-						<li>One is smaller than...</li>
-						<li>Two is smaller than...</li>
-						<li>Three!</li>
-					</ol>
-				</section>
+                <section data-transition="fade">
+                    <h2>Show of hands</h2>
+                    <ul class="orange">
+                        <li><b>What is your current role in Agile software development?</b>
+                            <div class="fragment" data-fragment-index="1"><span class="fragment current-visible pointer" data-fragment-index="1"></span>
+                                Product Owner</div>
+                            <div class="fragment" data-fragment-index="2"><span class="fragment current-visible pointer" data-fragment-index="2"></span>
+                                Scrum Master</div>
+                            <div class="fragment" data-fragment-index="3"><span class="fragment current-visible pointer" data-fragment-index="3"></span>
+                                Tester</div>
+                            <div class="fragment" data-fragment-index="4"><span class="fragment current-visible pointer" data-fragment-index="4"></span>
+                                Developer</div>
+                            <div class="fragment" data-fragment-index="5"><span class="fragment current-visible pointer" data-fragment-index="5"></span>
+                                Customer</div>
+                        </li><br/>
+                    </ul>
+                </section>
 
 				<section data-markdown>
 					<script type="text/template">
@@ -154,89 +143,6 @@
 						</section>
 						```
 					</script>
-				</section>
-
-				<section id="transitions">
-					<h2>Transition Styles</h2>
-					<p>
-						You can select from different transitions, like: <br>
-						<a href="?transition=cube#/transitions">Cube</a> -
-						<a href="?transition=page#/transitions">Page</a> -
-						<a href="?transition=concave#/transitions">Concave</a> -
-						<a href="?transition=zoom#/transitions">Zoom</a> -
-						<a href="?transition=linear#/transitions">Linear</a> -
-						<a href="?transition=fade#/transitions">Fade</a> -
-						<a href="?transition=none#/transitions">None</a> -
-						<a href="?#/transitions">Default</a>
-					</p>
-				</section>
-
-				<section id="themes">
-					<h2>Themes</h2>
-					<p>
-						Reveal.js comes with a few themes built in: <br>
-						<a href="?#/themes">Default</a> -
-						<a href="?theme=sky#/themes">Sky</a> -
-						<a href="?theme=beige#/themes">Beige</a> -
-						<a href="?theme=simple#/themes">Simple</a> -
-						<a href="?theme=serif#/themes">Serif</a> -
-						<a href="?theme=night#/themes">Night</a> <br>
-						<a href="?theme=moon#/themes">Moon</a> -
-						<a href="?theme=solarized#/themes">Solarized</a>
-					</p>
-					<p>
-						<small>
-							* Theme demos are loaded after the presentation which leads to flicker. In production you should load your theme in the <code>&lt;head&gt;</code> using a <code>&lt;link&gt;</code>.
-						</small>
-					</p>
-				</section>
-
-				<section>
-					<h2>Global State</h2>
-					<p>
-						Set <code>data-state="something"</code> on a slide and <code>"something"</code>
-						will be added as a class to the document element when the slide is open. This lets you
-						apply broader style changes, like switching the background.
-					</p>
-				</section>
-
-				<section data-state="customevent">
-					<h2>Custom Events</h2>
-					<p>
-						Additionally custom events can be triggered on a per slide basis by binding to the <code>data-state</code> name.
-					</p>
-					<pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
-Reveal.addEventListener( 'customevent', function() {
-	console.log( '"customevent" has fired' );
-} );
-					</code></pre>
-				</section>
-
-				<section>
-					<section data-background="#007777">
-						<h2>Slide Backgrounds</h2>
-						<p>
-							Set <code>data-background="#007777"</code> on a slide to change the full page background to the given color. All CSS color formats are supported.
-						</p>
-						<a href="#" class="image navigate-down">
-							<!-- <img width="178" height="238" src="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" alt="Down arrow"> -->
-						</a>
-					</section>
-<!-- 					<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png">
-						<h2>Image Backgrounds</h2>
-						<pre><code>&lt;section data-background="image.png"&gt;</code></pre>
-					</section>
-					<section data-background="https://s3.amazonaws.com/hakim-static/reveal-js/arrow.png" data-background-repeat="repeat" data-background-size="100px">
-						<h2>Repeated Image Backgrounds</h2>
-						<pre><code style="word-wrap: break-word;">&lt;section data-background="image.png" data-background-repeat="repeat" data-background-size="100px"&gt;</code></pre>
-					</section>
- -->				</section>
-
-				<section data-transition="linear" data-background="#4d7e65" data-background-transition="slide">
-					<h2>Background Transitions</h2>
-					<p>
-						Pass reveal.js the <code>backgroundTransition: 'slide'</code> config argument to make backgrounds slide rather than fade.
-					</p>
 				</section>
 
 				<section data-transition="linear" data-background="#8c4738" data-background-transition="slide">
@@ -317,37 +223,8 @@ function linkify( selector ) {
 					</section>
 				</section>
 
-				<section>
-					<h2>Spectacular image!</h2>
-					<a class="image" href="http://lab.hakim.se/meny/" target="_blank">
-						<!-- <img width="320" height="299" src="http://s3.amazonaws.com/hakim-static/portfolio/images/meny.png" alt="Meny"> -->
-					</a>
-				</section>
-
-				<section>
-					<h2>Export to PDF</h2>
-					<p>Presentations can be <a href="https://github.com/hakimel/reveal.js#pdf-export">exported to PDF</a>, below is an example that's been uploaded to SlideShare.</p>
-				</section>
-
-				<section>
-					<h2>Take a Moment</h2>
-					<p>
-						Press b or period on your keyboard to enter the 'paused' mode. This mode is helpful when you want to take distracting slides off the screen
-						during a presentation.
-					</p>
-				</section>
-
-				<section>
-					<h2>Stellar Links</h2>
-					<ul>
-						<li><a href="http://slid.es">Try the online editor</a></li>
-						<li><a href="https://github.com/hakimel/reveal.js">Source code on GitHub</a></li>
-						<li><a href="http://twitter.com/hakimel">Follow me on Twitter</a></li>
-					</ul>
-				</section>
-
 				<section class="center">
-					<h1>thank you</h1>
+					<h2>thank you</h2>
 					<h3></h3>
 				</section>
 
@@ -370,6 +247,7 @@ function linkify( selector ) {
 				overview: true,
 				center: false,
 				mouseWheel: true,
+                slideNumber: true,
 
 				theme: 'orange', //Reveal.getQueryHash().theme, // available themes are in /css/theme
 				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
