Corrected type in speaker name Added a few more slides

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h3>agile development practices</h3><br/>
             <h4>for sustainable software development</h4><br/>
             <p>
-                <div><small>by Ibrahime El-Etr &amp; Mohamed Ragab</small></div>
+                <div><small>by Ibrahim El-Etr &amp; Mohamed Ragab</small></div>
                 <div><small>Orange Labs Cairo</small></div>
             </p>
         </section>
@@ -73,22 +73,11 @@
             </p>
 
             <aside class="notes">
-                Ibrahim is currently the Head of Program Management in Orange Labs Cairo, and a MBA student in the
-                German University in Cairo. Ibrahim joined Orange Labs as the Head of Software Development in 2006.
-                Ibrahim has 8 years of solid management experience, leading several teams to deliver several portfolios
-                of software products to market. He has over 21 years of software development experience associated with
-                highly diversified portfolio of international companies in different culture environments such as
-                Orange, Telepin, Airwide solutions, Mitel networks, Nortel networks, and Newbridge (Alcatel Lucent). He
-                spent the first 15 years of his career working for start up companies including owning his own business.
-                Entrepreneurship is part of his DNA and he brings that outlook and method of work to every team he works
-                with.
-                Mohamed Ragab is currently the Head of Technology, and an Agile Development Coach in Orange Labs Cairo.
-                He joined Orange Labs as a Senior Software and Service Architect in 2009. Mohamed has more than 15 years
-                of experience building software systems in a wide range of industrial domains, in small local companies
-                as well as large multi-national organizations. Mohamed has experience delivering projects with small
-                collocated teams of a few developers to large distributed teams with a few hundred developers on board.
-                Mohamed's expertise is in the Java platform, Open Source technology stacks, software development
-                infrastructure and automation, and Agile Development Methodologies.
+                Ibrahim is currently the Head of Program Management in Orange Labs Cairo, and a MBA student in the German University in Cairo. Ibrahim joined Orange Labs as the Head of Software Development in 2006.
+                Ibrahim has 8 years of solid management experience, leading several teams to deliver several portfolios of software products to market. He has over 21 years of software development experience associated with highly diversified portfolio of international companies in different culture environments such as Orange, Telepin, Airwide solutions, Mitel networks, Nortel networks, and Newbridge (Alcatel Lucent). He spent the first 15 years of his career working for start up companies including owning his own business.
+                Entrepreneurship is part of his DNA and he brings that outlook and method of work to every team he works with.
+                Mohamed Ragab is currently the Head of Technology, and an Agile Development Coach in Orange Labs Cairo. He joined Orange Labs as a Senior Software and Service Architect in 2009. Mohamed has more than 15 years of experience building software systems in a wide range of industrial domains, in small local companies as well as large multi-national organizations. Mohamed has experience delivering projects with small collocated teams of a few developers to large distributed teams with a few hundred developers on board.
+                Mohamed's expertise is in the Java platform, Open Source technology stacks, software development infrastructure and automation, and Agile Development Methodologies.
             </aside>
         </section>
 
@@ -185,14 +174,58 @@
             <h2>State of affairs</h2>
         </section>
 
+        <section data-transition="fade" >
+            <h2>Software as an industry</h2>
+
+        </section>
+
+        <section data-transition="fade" >
+            <h2>Challenges</h2>
+            <br/>
+            <blockquote>&ldquo;Walking on water and developing software from a specification are easy if both are frozen&rdquo;</blockquote> by: Edward V. Berard
+            <br/>
+            <br/>
+            <h2 class="fragment">Learning</h2>
+        </section>
+
         <section data-transition="fade">
+            <h2>What is the goal?</h2>
+            <br/>
+            <blockquote>&ldquo;Build the right thing, right&rdquo;</blockquote>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">How do we know what "the right thing" is?</li>
+                <li class="fragment">Build it twice<span class="fragment">?</span><span class="fragment"> ... </span><span class="fragment">too expensive</span></li>
+                <li class="fragment">Build one small piece at a time, and learn</li>
+                <li class="fragment">Iterate, and <b>get feedback</b></li>
+            </ul>
+        </section>
 
-            <section data-markdown>
-                <script type="text/template">
-                    ## Software as an industry
+        <section data-transition="fade">
+            <h2>Software is like ...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+            <br/>
+            <div class="fragment"><b>a manufacturing process</b></div>
+            <br/>
+            <div class="fragment"><b>building construction</b></div>
+            <br/>
+                <h2 class="fragment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;no it's not</h2>
+        </section>
 
-                </script>
-            </section>
+        <section data-transition="fade">
+            <h2>Software is like ...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+            <br/>
+            <div class="fragment"><b>product design process</b></div>
+            <br/>
+            <div class="fragment"><b>gardening!</b></div>
+            <br/>
+            <h2 class="fragment">&nbsp;&nbsp;&nbsp;&nbsp;that's more like it</h2>
+        </section>
+
+        <section data-transition="fade">
+            <h2>What do you do if you have a late project?</h2>
+            <br/>
+            <blockquote class="fragment" data-fragment-index="1">&ldquo;adding manpower to a late software project makes it later&rdquo;</blockquote>
+            <div><span class="fragment" data-fragment-index="2">Fred Brooks</span><span class="fragment" data-fragment-index="4"> in his 1975 book </span><span class="fragment" data-fragment-index="3"><i>The Mythical Man-Month</i></span></div>
         </section>
 
 
@@ -226,7 +259,7 @@
 
 
 
-        <section class="center">
+        <section class="center"  data-transition="fade">
             <h2>thank you</h2>
         </section>
 
