Added reference data from the standish report

--- a/index.html
+++ b/index.html
@@ -59,14 +59,11 @@
             <p>
             <ul class="orange">
                 <li class="fragment"><b>Ibrahim El-Etr</b>
-
                     <div>Head of Program Management in Orange Labs Cairo</div>
                     <div>MBA student in the German University in Cairo</div>
-                    <div></div>
                 </li>
                 <br/>
                 <li class="fragment"><b>Mohamed Ragab</b>
-
                     <div>Head of Technology, and an Agile Development Coach in Orange Labs Cairo</div>
                 </li>
             </ul>
@@ -99,7 +96,6 @@
             <h2>Show of hands</h2>
             <ul class="orange">
                 <li><b>How do you relate yourself to software development?</b>
-
                     <div class="fragment" data-fragment-index="1"><span class="fragment current-visible pointer" data-fragment-index="1"></span>
                         Testing
                     </div>
@@ -123,7 +119,6 @@
             <h2>Show of hands</h2>
             <ul class="orange">
                 <li><b>Where are you from Agile software development?</b>
-
                     <div class="fragment" data-fragment-index="1"><span class="fragment current-visible pointer" data-fragment-index="1"></span>
                         Exploring
                     </div>
@@ -147,7 +142,6 @@
             <h2>Show of hands</h2>
             <ul class="orange">
                 <li><b>What is your current role in Agile software development?</b>
-
                     <div class="fragment" data-fragment-index="1"><span class="fragment current-visible pointer" data-fragment-index="1"></span>
                         Product Owner
                     </div>
@@ -176,7 +170,56 @@
 
         <section data-transition="fade" >
             <h2>Software as an industry</h2>
+        </section>
 
+        <section data-transition="fade" >
+            <h2>The Standish Group Report</h2>
+            <h3 class="fragment" data-fragment-index="4">"chaos report"</h3>
+            <ul class="orange">
+                <li class="fragment" data-fragment-index="1">The scope of software project failures.</li>
+                <li class="fragment" data-fragment-index="2">The major factors that cause software projects to fail.</li>
+                <li class="fragment" data-fragment-index="3">The key ingredients that can reduce project failures.</li>
+            </ul>
+        </section>
+
+        <section data-transition="fade">
+            <h2>Report: shows<span class="fragment" data-fragment-index="5"> (1995)</span></h2>
+            <ul class="orange">
+                <li class="fragment" data-fragment-index="1">31.1% of projects will be cancelled before they ever get completed</li>
+                <li class="fragment" data-fragment-index="2">52.7% of projects will cost 189% of their original estimates</li>
+                <li class="fragment" data-fragment-index="3">The lost opportunity costs are not measurable, but could easily be in the trillions of dollars</li>
+                <li class="fragment" data-fragment-index="4">The failure to produce reliable software to handle baggage at the new Denver airport is costing the city $1.1 million per day.</li>
+            </ul>
+        </section>
+
+        <section data-transition="fade">
+            <h3>report: project resolution results</h3>
+            <table>
+                <thead><td></td><td>2004</td><td>2006</td><td>2008</td><td>2010</td><td>2012</td></thead>
+                <tr><td>Successful</td><td>29%</td><td>35%</td><td>32%</td><td>37%</td><td>39%</td></tr>
+                <tr><td>Failed</td><td>18%</td><td>19%</td><td>24%</td><td>21%</td><td>18%</td></tr>
+                <tr><td>Challenged</td><td>53%</td><td>46%</td><td>44%</td><td>42%</td><td>43%</td></tr>
+            </table>
+        </section>
+
+        <section data-transition="fade">
+            <h2>Report: Factors of Success</h2>
+            <ul class="orange">
+                <li>(20) Executive management support</li>
+                <li>(15) User involvement</li>
+                <li>(15) Optimization</li>
+                <li>(13) Skilled resources</li>
+                <li>(12) Project management expertise</li>
+                <li>(10) Agile process</li>
+                <li>(6) Clear business objectives</li>
+                <li>(5) Emotional maturity</li>
+                <li>(3) Execution</li>
+                <li>(1) Tools and infrastructure</li>
+            </ul>
+
+            <aside class="notes">
+                Standish report 2013 page 7
+            </aside>
         </section>
 
         <section data-transition="fade" >
