--- a/index.html
+++ b/index.html
@@ -194,13 +194,18 @@
 
         <section data-transition="fade">
             <h3>report: project resolution results</h3>
-            <table>
-                <thead><td></td><td>2004</td><td>2006</td><td>2008</td><td>2010</td><td>2012</td></thead>
+            <div style="align-content: center;">
+            <table class="orange">
+                <thead><td>&nbsp;</td><td>2004</td><td>2006</td><td>2008</td><td>2010</td><td>2012</td></thead>
+                <tbody>
                 <tr><td>Successful</td><td>29%</td><td>35%</td><td>32%</td><td>37%</td><td>39%</td></tr>
                 <tr><td>Failed</td><td>18%</td><td>19%</td><td>24%</td><td>21%</td><td>18%</td></tr>
                 <tr><td>Challenged</td><td>53%</td><td>46%</td><td>44%</td><td>42%</td><td>43%</td></tr>
+                </tbody>
             </table>
+            </div>
         </section>
+
 
         <section data-transition="fade">
             <h2>Report: Factors of Success</h2>
@@ -219,6 +224,7 @@
 
             <aside class="notes">
                 Standish report 2013 page 7
+                http://www.versionone.com/assets/img/files/CHAOSManifesto2013.pdf
             </aside>
         </section>
 
