More slides Add: Wrappping up

--- a/index.html
+++ b/index.html
@@ -166,18 +166,16 @@
 
         <section class="center">
             <h2>State of affairs</h2>
+            <h3>in the young industry of software</h3>
         </section>
 
-        <section data-transition="fade" >
-            <h2>Software as an industry</h2>
-        </section>
-
-        <section data-transition="fade" >
+        <section data-transition="fade">
             <h2>The Standish Group Report</h2>
             <h3 class="fragment" data-fragment-index="4">"chaos report"</h3>
+            <br/>
             <ul class="orange">
-                <li class="fragment" data-fragment-index="1">The scope of software project failures.</li>
-                <li class="fragment" data-fragment-index="2">The major factors that cause software projects to fail.</li>
+                <li class="fragment" data-fragment-index="1">The scope of software project failures.</li><br/>
+                <li class="fragment" data-fragment-index="2">The major factors that cause software projects to fail.</li><br/>
                 <li class="fragment" data-fragment-index="3">The key ingredients that can reduce project failures.</li>
             </ul>
         </section>
@@ -193,7 +191,7 @@
         </section>
 
         <section data-transition="fade">
-            <h3>report: project resolution results</h3>
+            <h3>report: projects' resolutions (2013)</h3>
             <div style="align-content: center;">
             <table class="orange">
                 <thead><td>&nbsp;</td><td>2004</td><td>2006</td><td>2008</td><td>2010</td><td>2012</td></thead>
@@ -208,7 +206,7 @@
 
 
         <section data-transition="fade">
-            <h2>Report: Factors of Success</h2>
+            <h3>Report: Factors of Success</h3>
             <ul class="orange">
                 <li>(20) Executive management support</li>
                 <li>(15) User involvement</li>
@@ -228,13 +226,24 @@
             </aside>
         </section>
 
+
+        <section data-transition="fade">
+            <h2>Report: features usage</h2>
+            <br/>
+            <ul class="orange">
+                <li>20% of features are used often and</li><br/>
+                <li>30% of features and functions get used sometimes or infrequently</li><br/>
+                <li>50% of features are hardly ever or never used.</li>
+            </ul>
+        </section>
+
         <section data-transition="fade" >
-            <h2>Challenges</h2>
+            <h3>the Bottleneck in software development</h3>
             <br/>
             <blockquote>&ldquo;Walking on water and developing software from a specification are easy if both are frozen&rdquo;</blockquote> by: Edward V. Berard
             <br/>
             <br/>
-            <h2 class="fragment">Learning</h2>
+            <h2 class="fragment">Learning is the Bottleneck</h2>
         </section>
 
         <section data-transition="fade">
@@ -260,6 +269,7 @@
                 <h2 class="fragment">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;no it's not</h2>
         </section>
 
+
         <section data-transition="fade">
             <h2>Software is like ...&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
             <br/>
@@ -271,17 +281,13 @@
         </section>
 
         <section data-transition="fade">
-            <h2>What do you do if you have a late project?</h2>
+            <h2>late project ..</h2>
+            <br/>
+            <div>What to do?</div>
             <br/>
             <blockquote class="fragment" data-fragment-index="1">&ldquo;adding manpower to a late software project makes it later&rdquo;</blockquote>
-            <div><span class="fragment" data-fragment-index="2">Fred Brooks</span><span class="fragment" data-fragment-index="4"> in his 1975 book </span><span class="fragment" data-fragment-index="3"><i>The Mythical Man-Month</i></span></div>
+            <div><span class="fragment" data-fragment-index="2">Fred Brooks in his book <i>The Mythical Man-Month</i></span><span class="fragment" data-fragment-index="3"> <b>1975</b></span></div>
         </section>
-
-
-        <section class="center">
-            <h2>Be Agile adopting Agile</h2>
-        </section>
-
 
 
         <section class="center">
@@ -300,6 +306,29 @@
             <h2>Wrapping up</h2>
         </section>
 
+        <section data-transition="fade">
+            <h2>there is no silver bullet ..</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">There will be failures, use them well</li>
+                <li class="fragment">Make things visible</li>
+                <li class="fragment">There will be successes, use them well</li>
+                <li class="fragment">Agile development exposes the issues that are already there</li>
+                <li class="fragment">Can you handle the feedback</li>
+            </ul>
+        </section>
+
+        <section data-transition="fade">
+            <h2>there is no silver bullet ..</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">We succeed together, or we fail together</li>
+                <li class="fragment">If you don't trust your team, Agile is not for you</li>
+                <li class="fragment">Unlearn, Learn, practice, and evolve</li>
+                <li class="fragment">Be ware of: not enough training</li>
+                <li class="fragment">Be Agile adopting Agile</li>
+            </ul>
+        </section>
 
 
         <section class="center">
@@ -307,10 +336,10 @@
         </section>
 
 
-
         <section class="center"  data-transition="fade">
             <h2>thank you</h2>
         </section>
+
 
 
         <section>
