Lean XP Agile Manifesto

--- a/index.html
+++ b/index.html
@@ -295,9 +295,173 @@
         </section>
 
 
+        <section data-transition="fade">
+            <h3>Lean software development (LSD)</h3>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">A translation of lean manufacturing and lean IT principles and practices</li><br/>
+                <li class="fragment">Adapted from the Toyota Production System</li><br/>
+                <li class="fragment">Lean Software Development: An Agile Toolkit, by Mary Poppendieck and Tom Poppendieck, 2003</li>
+            </ul>
+
+            <aside class="notes">
+                http://en.wikipedia.org/wiki/Lean_software_development
+
+
+                http://www.poppendieck.com/
+                http://www.amazon.com/Lean-Software-Development-Agile-Toolkit-ebook/dp/B00HEL13HW/
+                Lean Software Development: An Agile Toolkit
+                May 18, 2003
+                by Mary Poppendieck, Tom Poppendieck
+
+                http://en.wikipedia.org/wiki/Lean_manufacturing
+                Essentially, lean is centered on making obvious what adds value by reducing everything else.
+
+                "lean manufacturing." Taiichi Ohno, and Eiji Toyoda developed the system between 1948 and 1975
+
+            </aside>
+        </section>
+
+        <section data-transition="fade">
+            <h3>Lean software development</h3>
+            <h3 class="fragment">Lean principles</h3>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Eliminate waste</li>
+                <li class="fragment">Amplify learning</li>
+                <li class="fragment">Decide as late as possible</li>
+                <li class="fragment">Deliver as fast as possible</li>
+                <li class="fragment">Empower the team</li>
+                <li class="fragment">Build integrity in</li>
+                <li class="fragment">See the whole</li>
+            </ul>
+
+            <aside class="notes">
+                Deliver as fast as possible
+                The sooner the end product is delivered without major defects, the sooner feedback can be received, and incorporated into the next iteration.
+
+                Empower the team
+                the managers tell the workers how to do their own job
+                find good people and let them do their own job
+
+            </aside>
+        </section>
+
+
+        <section data-transition="fade"></section>
+
+
+        <section data-transition="fade">
+            <h2>Extreme Programming (xp)</h2>
+            <br/>
+            <blockquote>A software-development discipline that organizes people to produce higher-quality software more productively</blockquote>
+            <div>Extreme Programming Explained, by Kent Beck, 1999</div>
+        </section>
+
+        <section data-transition="fade">
+            <h2>XP Practices ..</h2>
+            <ul class="orange">
+                <li class="fragment">Pair programming</li>
+                <li class="fragment">Planning game</li>
+                <li class="fragment">Test-driven development</li>
+                <li class="fragment">Continuous integration</li>
+                <li class="fragment">Refactoring</li>
+                <li class="fragment">Small releases</li>
+                <li class="fragment">Coding standard</li>
+                <li class="fragment">Collective code ownership</li>
+                <li class="fragment">Simple design</li>
+                <li class="fragment">Sustainable pace</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade"></section>
+
+
+        <section data-transition="fade">
+            <h2>Agile Manifesto (2001)</h2>
+            <br/>
+            <blockquote><b>Individuals and interactions</b> over processes and tools <br/>
+                <b>Working software</b> over comprehensive documentation<br/>
+                <b>Customer collaboration</b> over contract negotiation<br/>
+                <b>Responding to change</b> over following a plan
+            </blockquote>
+        </section>
+
+
+        <section data-transition="fade"></section>
+
+
+        <section data-transition="fade">
+            <h2>Scrum</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade"></section>
+
+
+        <section data-transition="fade">
+            <h2>management and engineering</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Test driven development</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Refactoring</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Test driven development</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Behaviour driven development</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Continuous integration</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">todo</li>
+            </ul>
+        </section>
+
+
 
         <section class="center">
             <h2>Challenges</h2>
+            culture eats strategy for dinner
         </section>
 
 
@@ -324,7 +488,7 @@
             <ul class="orange">
                 <li class="fragment">We succeed together, or we fail together</li>
                 <li class="fragment">If you don't trust your team, Agile is not for you</li>
-                <li class="fragment">Unlearn, Learn, practice, and evolve</li>
+                <li class="fragment">Unlearn, learn, practice, and evolve</li>
                 <li class="fragment">Be ware of: not enough training</li>
                 <li class="fragment">Be Agile adopting Agile</li>
             </ul>
