--- a/index.html
+++ b/index.html
@@ -374,6 +374,11 @@
             </ul>
         </section>
 
+        <section data-transition="fade">
+            <h2>XP Feedback Cycles ..</h2>
+            <img src="Extreme_Programming.svg" class="stretch"/>
+        </section>
+
 
         <section data-transition="fade"></section>
 
@@ -389,17 +394,52 @@
         </section>
 
 
+        <section data-transition="fade">
+            <h2>Agile Manifesto Principles</h2>
+            <ul class="orange">
+                <li class="fragment">Early and continuous delivery of valuable software</li>
+                <li class="fragment">Welcome changing requirements</li>
+                <li class="fragment">Deliver working software frequently</li>
+                <li class="fragment">Business people and developers must work together</li>
+                <li class="fragment">Build projects around motivated individuals</li>
+                <li class="fragment">Face-to-face conversation</li>
+            </ul>
+        </section>
+        <section data-transition="fade">
+            <h2>Agile Manifesto Principles</h2>
+            <ul class="orange">
+                <li class="fragment">Working software is the primary measure of progress</li>
+                <li class="fragment">Sustainable development, maintain a constant pace indefinitely</li>
+                <li class="fragment">Continuous attention to technical excellence and good design</li>
+                <li class="fragment">Simplicity, maximizing the amount of work not done</li>
+                <li class="fragment">The best architectures, requirements, and designs emerge from self-organizing teams</li>
+                <li class="fragment">At regular intervals: reflect, then tune and adjust accordingly</li>
+            </ul>
+        </section>
+
         <section data-transition="fade"></section>
+
+
+        <section data-transition="fade">
+            <h2>Scrum</h2>
+            <blockquote class="fragment">Scrum is an iterative and incremental agile software development framework for managing product development</blockquote>
+            <br/>
+            <blockquote class="fragment">Scrum adopts an empirical approach—accepting that the problem cannot be fully understood or defined, focusing instead on maximizing the team's ability to deliver quickly and respond to emerging requirements</blockquote>
+        </section>
 
 
         <section data-transition="fade">
             <h2>Scrum</h2>
             <br/>
             <ul class="orange">
-                <li class="fragment">todo</li>
+                <li class="fragment"><b>Roles:</b> Product Owner, Development Team, Scrum Master</li>
+                <li class="fragment"><b>Events:</b> Sprint, Sprint planning meeting, Daily scrum, Spring review &amp; retrospective, Backlog refinement meeting</li>
+                <li class="fragment"><b>Artifacts:</b> Product backlog, Spring backlog, Product increment</li>
+                <li class="fragment"><b>Progress:</b> Burndown chart, Burnup chart</li>
+                <li class="fragment"><b>Def. of Done:</b> Backlog item, Sprint, Release</li>
+                <li class="fragment"><b>Relative Sizing:</b> Story points</li>
             </ul>
         </section>
-
 
         <section data-transition="fade"></section>
 
