--- a/index.html
+++ b/index.html
@@ -417,8 +417,16 @@
             </ul>
         </section>
 
+
         <section data-transition="fade"></section>
 
+
+        <section data-transition="fade">
+            <h2>Scrum</h2>
+            <blockquote class="fragment">In 1995, Jeff Sutherland and Ken Schwaber jointly presented a paper describing the Scrum methodology at OOPSLA '95</blockquote>
+            <br/>
+            <blockquote class="fragment">In 2001, Schwaber worked with Mike Beedle to describe the method in the book Agile Software Development with Scrum</blockquote>
+        </section>
 
         <section data-transition="fade">
             <h2>Scrum</h2>
@@ -437,12 +445,45 @@
                 <li class="fragment"><b>Artifacts:</b> Product backlog, Spring backlog, Product increment</li>
                 <li class="fragment"><b>Progress:</b> Burndown chart, Burnup chart</li>
                 <li class="fragment"><b>Def. of Done:</b> Backlog item, Sprint, Release</li>
-                <li class="fragment"><b>Relative Sizing:</b> Story points</li>
+                <li class="fragment"><b>Relative Sizing:</b> Story points, using a rounded Fibonacci sequence</li>
             </ul>
         </section>
 
         <section data-transition="fade"></section>
 
+
+        <section data-transition="fade">
+            <h2>Kanban</h2>
+            <br/>
+            <blockquote class="fragment">Kanban is a method for managing knowledge work with an emphasis on just-in-time delivery while not overloading the team members</blockquote>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Kanban</h2>
+            <br/>
+            <ul class="orange">
+                <li class="fragment">Map your current process</li>
+                <li class="fragment">Define the start and end points for the Kanban system</li>
+                <li class="fragment">Agree on initial work in progress (WIP) limits</li>
+                <li class="fragment">Agree on a process for prioritising and selecting items</li>
+                <li class="fragment">Agree on frequency of reviews</li>
+                <li class="fragment">Draw the board and start using</li>
+                <li class="fragment">Tune as you go</li>
+            </ul>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Kanban</h2>
+            <img src="kanban-board-1.png" class="stretch"/>
+        </section>
+
+
+        <section data-transition="fade">
+            <h2>Kanban</h2>
+            <img src="kanban-board-2.png" class="stretch"/>
+        </section>
 
         <section data-transition="fade">
             <h2>management and engineering</h2>
@@ -472,15 +513,6 @@
 
 
         <section data-transition="fade">
-            <h2>Test driven development</h2>
-            <br/>
-            <ul class="orange">
-                <li class="fragment">todo</li>
-            </ul>
-        </section>
-
-
-        <section data-transition="fade">
             <h2>Behaviour driven development</h2>
             <br/>
             <ul class="orange">
@@ -500,7 +532,7 @@
 
 
         <section class="center">
-            <h2>Challenges</h2>
+            <h2>Challenges</h2> from the trenches
             culture eats strategy for dinner
         </section>
 
